--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     --color-blue: #39c;
 }
 
+a {
+    text-decoration: none;
+  }
+
 html {
     font-size: 62.5%;
 }
@@ -13,13 +17,68 @@ body {
     font-size: 2rem;
     line-height: 1.5;
     color: var(--color-white);
-  }
+}
+
+section{
+    padding-top: 3rem;
+}
 
 .body--background{
     background-color: #3a3d42;
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 /* About Me */
 .intro--greeting{
     color: var(--color-blue);
 }
+
+/* Navigation Bar */
+.nav {
+    top: 0%;
+    position: fixed;
+    background: #000;
+    display: flex;
+    justify-content:flex-end;
+    flex-wrap: wrap;
+    padding: 1rem;
+    width: 100%;
+  }
+  
+  .nav__list {
+    width: 100%;
+    margin: 0;
+  }
+  
+  .nav__item {
+    padding-right: 5rem;
+  }
+  
+  .nav__item > a {
+    color: var(--color-white);
+    transition: color 0.3s;
+  }
+  
+  .nav__item > a:hover {
+    color: var(--color-blue);
+  }
+  
+  @media screen and (min-width: 768px) {  
+    .nav__list {
+      width: auto;
+      display: flex;
+      font-size: 1.6rem;
+      max-height: 100%;
+      opacity: 1;
+    }
+  
+    .nav__item {
+      border: 0;
+    }
+  }
+  
