--- a/styles/style.css
+++ b/styles/style.css
@@ -45,40 +45,30 @@ section{
     background: #000;
     display: flex;
     justify-content:flex-end;
-    flex-wrap: wrap;
     padding: 1rem;
     width: 100%;
-  }
+}
   
-  .nav__list {
+.nav__list {
     width: 100%;
     margin: 0;
-  }
+    width: auto;
+    display: flex;
+    font-size: 1.6rem;
+    height: fit-content;
+    opacity: 1;
+}
   
-  .nav__item {
+.nav__item {
     padding-right: 5rem;
-  }
+    border: 0;
+}
   
-  .nav__item > a {
+.nav__item > a {
     color: var(--color-white);
     transition: color 0.3s;
-  }
+}
   
-  .nav__item > a:hover {
+.nav__item > a:hover {
     color: var(--color-blue);
-  }
-  
-  @media screen and (min-width: 768px) {  
-    .nav__list {
-      width: auto;
-      display: flex;
-      font-size: 1.6rem;
-      max-height: 100%;
-      opacity: 1;
-    }
-  
-    .nav__item {
-      border: 0;
-    }
-  }
-  
+}
