--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,12 @@ section{
     margin: 0;
 }
 
+@media screen and (max-width: 768px){
+    body{
+        padding-top: 6rem;
+    }
+}
+
 /* About Me */
 .intro--greeting{
     color: var(--color-blue);
@@ -43,8 +49,6 @@ section{
     top: 0%;
     position: fixed;
     background: #000;
-    display: flex;
-    justify-content:flex-end;
     padding: 1rem;
     width: 100%;
 }
@@ -57,6 +61,8 @@ section{
     font-size: 1.6rem;
     height: fit-content;
     opacity: 1;
+    flex-direction: row;
+    justify-content: flex-end;
 }
   
 .nav__item {
@@ -71,4 +77,10 @@ section{
   
 .nav__item > a:hover {
     color: var(--color-blue);
+}
+
+@media screen and (max-width: 768px){
+    .nav__list{
+        flex-direction: column;
+    }
 }
