--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,10 @@ section{
     margin: 0;
 }
 
+.makeBlue{
+    color: var(--color-blue);
+}
+
 @media screen and (max-width: 768px){
     body{
         padding-top: 6rem;
@@ -40,9 +44,7 @@ section{
 }
 
 /* About Me */
-.intro--greeting{
-    color: var(--color-blue);
-}
+
 
 /* Navigation Bar */
 .nav {
