--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,11 @@ html {
     font-size: 62.5%;
 }
 
+h1 {
+    font-size: 2rem;
+    text-decoration: none;
+}
+
 body {
     font-family: 'Courier Prime', monospace;
     font-size: 2rem;
